overflow - correction

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,8 @@
 *{
+    box-sizing:border-box;
     margin: 0;
     padding: 0;
     font-family: 'poppins', sans-serif;
-    box-sizing:border-box;
 }
 
 :root{
@@ -15,11 +15,13 @@
 
 html{   
     scroll-behavior: smooth;
+    overflow-x: hidden; 
 }
 body{ 
     background:var(--bg-color);
      /* #222831; */
     color: #fff;
+    overflow-x: hidden; 
 }
 
 #header{
@@ -57,9 +59,8 @@ body{
 
 
 
-
 .container{ 
-    padding: 10px 8%;
+    padding: 10px 8%;   
 }
 
 .nav-bar{
@@ -535,8 +536,14 @@ form .btn2{
 /*-----------------css for small screens---------------*/
 nav .fas{
     display: none;
+    padding-right: 20px;
 }
-@media only screen and (max-width: 600px){
+
+
+@media only screen and (max-width: 700px){
+    
+    
+    
     #header{
         /* background-image: url(images/phone-background.png); */
         text-align: center;
@@ -548,7 +555,8 @@ nav .fas{
     .header-text h1{
         font-size: 30px;
     }
-    
+
+
     .nav-bar{
       padding: 5px;
       padding-right: 3  0px;
@@ -558,7 +566,7 @@ nav .fas{
         font-size: 25px;
     }
      nav ul{
-        background: #00ffff;
+        background: var(--primary-color)    ;
         position: fixed;
         top: 0;
         right: -200px;
@@ -578,6 +586,9 @@ nav .fas{
         left: 25px;
         cursor: pointer;
      }
+
+     
+
      .sub-title{
         font-size: 40px;
      }
@@ -594,6 +605,10 @@ nav .fas{
         font-size: 16px;
         margin-right: 20px;
      }
+     .tab-contents ul li {
+        word-wrap: break-word;
+     }
+
      .contact-left, .contact-right{
         flex-basis: 100%;
      }
